SERVER-39513 NetworkInterface::setAlarm should be cancellable