src/mongo/executor/network_interface_thread_pool.h
@@ -60,8 +60,9 @@ public:
     Status schedule(Task task) override;
 
 private:
-    void consumeTasks(stdx::unique_lock<stdx::mutex> lk);
-    void dtorImpl();
+    void _consumeTasks(stdx::unique_lock<stdx::mutex> lk);
+    void _consumeTasksInline(stdx::unique_lock<stdx::mutex> lk);
+    void _dtorImpl();
 
     NetworkInterface* const _net;
 
@@ -72,8 +73,13 @@ private:
     bool _started = false;
     bool _inShutdown = false;
     bool _joining = false;
-    bool _registeredAlarm = false;
-    bool _consumingTasks = false;
+
+    enum class ConsumeState {
+        kNeutral = 0,
+        kScheduled,
+        kConsuming,
+    };
+    ConsumeState _consumeState = ConsumeState::kNeutral;
 };
 
 }  // namespace executor
